# gsply

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  FINAL_COMMIT_GUIDE.md  GSDATA_FIX_SUMMARY.md  README.md  WORKFLOW_BRANCH_FIX.md  WORKFLOW_VERIFICATION.md  build.ps1  build.sh  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md  workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build.yml  docs.yml  publish.yml  test.yml
benchmarks/: AUTO_CONSOLIDATION_SUMMARY.md  BASE_CONSTRUCTION_ANALYSIS.md  BENCHMARK_SUMMARY.md  CONTAINER_BENCHMARK_RESULTS.md  QUICK_REFERENCE.md  README.md  TRANSFER_OPTIMIZATION_ANALYSIS.md  VERIFIED_BENCHMARKS.md  WRITE_OPTIMIZATION_ANALYSIS.md  benchmark.py  benchmark_add_method.py  benchmark_add_strategies.py  benchmark_all_real_data.py  benchmark_base_analysis.py  benchmark_base_construction.py  benchmark_color_conversion.py  benchmark_compressed.py  benchmark_compressed_speedup.py  benchmark_compressed_write.py  benchmark_concatenation.py  benchmark_container_types.py  benchmark_contiguity.py  benchmark_extended.py  benchmark_fast_read.py  benchmark_logit_sigmoid.py  benchmark_make_contiguous.py  benchmark_miniply_hybrid.py  benchmark_optimizations.py  benchmark_real_data.py  benchmark_results.txt  benchmark_sh3_optimization.py  benchmark_torch_transfer.py  benchmark_write_comprehensive.py  benchmark_zero_copy.py  benchmark_zero_copy_write.py  debug_layout_difference.py  generate_test_data.py  profile_write.py  test_auto_consolidate.py  test_consolidate_layout.py  (+13 more)
docs/: API_REFERENCE.md  CHANGELOG.md  CONCATENATION_OPTIMIZATIONS.md  CONTRIBUTING.md  GUIDE.md  requirements.txt
docs/archive/: ADDITIONAL_OPTIMIZATIONS.md  ALL_OPTIMIZATIONS_SUMMARY.md  BENCHMARK_RESULTS.md  BUILD.md  CI_CD_SETUP.md  CLEANUP_SUMMARY.md  CODE_ANALYSIS.md  COMMIT_GUIDE.md  COMPATIBILITY_FIXES.md  COMPRESSED_FORMAT.md  FINAL_CLEANUP_SUMMARY.md  INDEX.md  INVESTIGATION_SUMMARY.md  MERGE_SUMMARY.md  MINIPLY_ANALYSIS.md  OPTIMIZATION_IMPLEMENTED.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PRODUCTION_READY_SUMMARY.md  QUICK_WINS_RESULTS.md  RELEASE_CLEANUP_SUMMARY.md  ROOT_STRUCTURE_FINAL.md  ULTRA_MINIMAL_COMPLETE.md  ULTRA_MINIMAL_PLAN.md  VECTORIZATION_EXPLAINED.md  VECTORIZATION_RESULTS.md
docs/source/: changelog.md  conf.py  index.rst  overview.md  usage.md
docs/source/_static/: custom.css
docs/source/api/: formats.rst  gsdata.rst  index.rst  reader.rst  sog_reader.rst  torch.rst  utils.rst  writer.rst
src/gsply/: __init__.py  formats.py  gsdata.py  reader.py  sog_reader.py  utils.py  writer.py
src/gsply/torch/: __init__.py  compression.py  gstensor.py  io.py
tests/: conftest.py  test_api.py  test_compress_apis.py  test_dataclass_refactor.py  test_decompress_api.py  test_format_management.py  test_formats.py  test_gpu_compression.py  test_gstensor.py  test_gstensor_conversion.py  test_gstensor_performance.py  test_mask_layers.py  test_optimization_verification.py  test_reader.py  test_sog_reader.py  test_writer.py
